--- a/athens.html
+++ b/athens.html
@@ -101,12 +101,12 @@
             <!-- 01 -->
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel1.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722" target="_blank">
                         <h2>
                             Ergon House
                         </h2>
@@ -130,7 +130,7 @@
             <div class="top-hotel-inner">
 
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084" target="_blank">
                         <h2>
                             The Zillers Boutique Hotel
                         </h2>
@@ -144,7 +144,7 @@
                     </p>
                 </div>
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel2.jpg);"></div>
                     </a>
                 </div>
@@ -157,12 +157,12 @@
         <div class="container">
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel3.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945" target="_blank">
                         <h2>
                             Ava Hotel & Suites
                         </h2>
@@ -186,7 +186,7 @@
             <div class="top-hotel-inner">
 
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257324">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257324" target="_blank">
                         <h2>
                             COCO-MAT Athens BC
                         </h2>
@@ -200,7 +200,7 @@
                     </p>
                 </div>
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257324">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257324" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel4.jpg);"></div>
                     </a>
                 </div>
@@ -213,12 +213,12 @@
         <div class="container">
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=2090399">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=2090399"  target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel5.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=2090399">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=2090399" target="_blank">
                         <h2>
                             18 Micon Street
                         </h2>
@@ -241,7 +241,7 @@
             <div class="top-hotel-inner">
 
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=62324">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=62324" target="_blank">
                         <h2>
                             Herodion Hotel
                         </h2>
@@ -255,7 +255,7 @@
                     </p>
                 </div>
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=62324">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=62324" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel6.jpg);"></div>
                     </a>
                 </div>
@@ -268,12 +268,12 @@
         <div class="container">
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=8099318">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=8099318" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel7.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=8099318">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=8099318" target="_blank">
                         <h2>
                             NLH Fix – Neighborhood Lifestyle Hotel
                         </h2>
@@ -297,7 +297,7 @@
             <div class="top-hotel-inner">
 
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1397187">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1397187"  target="_blank">
                         <h2>
                             Electra Metropolis Athens
                         </h2>
@@ -312,7 +312,7 @@
                     </p>
                 </div>
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1397187">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1397187" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel8.jpg);"></div>
                     </a>
                 </div>
