--- a/patras.html
+++ b/patras.html
@@ -103,12 +103,12 @@
             <!-- 01 -->
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=243730">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=243730"  target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/patra-hotel1.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=243730">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=243730"  target="_blank">
                         <h2>
                             Maison Grecque Hotel Extraordinaire
                         </h2>
@@ -130,7 +130,7 @@
             <div class="top-hotel-inner">
 
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=227471">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=227471"  target="_blank">
                         <h2>
                             Airotel Patras Smart Hotel
                         </h2>
@@ -143,7 +143,7 @@
                     </p>
                 </div>
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=227471">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=227471"  target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/patras-hotel2.jpg);"></div>
                     </a>
                 </div>
@@ -156,12 +156,12 @@
         <div class="container">
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=143619">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=143619"  target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/patras-hotel3.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=143619">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=143619"  target="_blank">
                         <h2>
                             Byzantino Hotel Patras
                         </h2>
@@ -183,7 +183,7 @@
             <div class="top-hotel-inner">
 
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=376155">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=376155"  target="_blank">
                         <h2>
                             City Loft Boutique Hotel
                         </h2>
@@ -196,7 +196,7 @@
                     </p>
                 </div>
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=376155">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=376155"  target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/patras-hotel4.jpg);"></div>
                     </a>
                 </div>
@@ -209,12 +209,12 @@
         <div class="container">
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=58650349">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=58650349"  target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/patras-hotel5.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=58650349">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=58650349"  target="_blank">
                         <h2>
                             Poseidon Palace Hotel
                         </h2>
@@ -236,7 +236,7 @@
             <div class="top-hotel-inner">
 
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=37841691">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=37841691"  target="_blank">
                         <h2>
                             Astir Hotel Patras
                         </h2>
@@ -249,7 +249,7 @@
                     </p>
                 </div>
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=37841691">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=37841691"  target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/patras-hotel6.jpg);"></div>
                     </a>
                 </div>
@@ -262,12 +262,12 @@
         <div class="container">
             <div class="top-hotel-inner">
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=13830734">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=13830734" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/patras-hotel7.jpg);"></div>
                     </a>
                 </div>
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=13830734">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=13830734" target="_blank">
                         <h2>
                             Patras Palace Hotel
                         </h2>
@@ -289,7 +289,7 @@
             <div class="top-hotel-inner">
 
                 <div class="top-hotel-text">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=163457">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=163457" target="_blank">
                         <h2>
                             Olympic Star Hotel
                         </h2>
@@ -302,7 +302,7 @@
                     </p>
                 </div>
                 <div class="top-hotel-main">
-                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=163457">
+                    <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=163457" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/patras-hotel8.jpg);"></div>
                     </a>
                 </div>
