--- a/thessaloniki.html
+++ b/thessaloniki.html
@@ -101,12 +101,12 @@
         <!-- 01 -->
         <div class="top-hotel-inner">
             <div class="top-hotel-main">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437324">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437324"  target="_blank">
                     <div class="top-hotel-img" style="background-image: url(assets/images/thessaloniki-hotel1.jpg);"></div>
                 </a>
             </div>
             <div class="top-hotel-text">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437324">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437324"  target="_blank">
                     <h2>
                         The Modernist Thessaloniki
                     </h2>
@@ -128,7 +128,7 @@
         <div class="top-hotel-inner">
 
             <div class="top-hotel-text">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10256803">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10256803"  target="_blank">
                     <h2>
                         Electra Palace Thessaloniki
                     </h2>
@@ -141,7 +141,7 @@
                 </p>
             </div>
             <div class="top-hotel-main">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10256803">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10256803"  target="_blank">
                     <div class="top-hotel-img" style="background-image: url(assets/images/thessaloniki-hotel2.jpg);"></div>
                 </a>
             </div>
@@ -154,12 +154,12 @@
     <div class="container">
         <div class="top-hotel-inner">
             <div class="top-hotel-main">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1651947">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1651947"  target="_blank">
                     <div class="top-hotel-img" style="background-image: url(assets/images/thessaloniki-hotel3.jpg);"></div>
                 </a>
             </div>
             <div class="top-hotel-text">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1651947">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1651947"  target="_blank">
                     <h2>
                         Colors Urban Hotel
                     </h2>
@@ -181,7 +181,7 @@
         <div class="top-hotel-inner">
 
             <div class="top-hotel-text">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257403">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257403" target="_blank">
                     <h2>
                         Makedonia Palace
                     </h2>
@@ -194,7 +194,7 @@
                 </p>
             </div>
             <div class="top-hotel-main">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257403">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10257403"  target="_blank">
                     <div class="top-hotel-img" style="background-image: url(assets/images/thessaloniki-hotel4.jpg);"></div>
                 </a>
             </div>
@@ -207,12 +207,12 @@
     <div class="container">
         <div class="top-hotel-inner">
             <div class="top-hotel-main">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=65477587">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=65477587"  target="_blank">
                     <div class="top-hotel-img" style="background-image: url(assets/images/thessaloniki-hotel5.jpg);"></div>
                 </a>
             </div>
             <div class="top-hotel-text">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=65477587">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=65477587"  target="_blank">
                     <h2>
                         The Met Hotel
                     </h2>
@@ -234,7 +234,7 @@
         <div class="top-hotel-inner">
 
             <div class="top-hotel-text">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=548372">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=548372"  target="_blank">
                     <h2>
                         Capsis Hotel Thessaloniki
                     </h2>
@@ -247,7 +247,7 @@
                 </p>
             </div>
             <div class="top-hotel-main">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=548372">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=548372" target="_blank">
                     <div class="top-hotel-img" style="background-image: url(assets/images/thessaloniki-hotel6.jpg);"></div>
                 </a>
             </div>
@@ -260,12 +260,12 @@
     <div class="container">
         <div class="top-hotel-inner">
             <div class="top-hotel-main">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1566392">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1566392"  target="_blank">
                     <div class="top-hotel-img" style="background-image: url(assets/images/thessaloniki-hotel7.jpg);"></div>
                 </a>
             </div>
             <div class="top-hotel-text">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1566392">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=1566392"  target="_blank">
                     <h2>
                         Blue Bottle Boutique Hotel
                     </h2>
@@ -287,7 +287,7 @@
         <div class="top-hotel-inner">
 
             <div class="top-hotel-text">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=26957092">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=26957092"  target="_blank">
                     <h2>
                         ONOMA Hotel
                     </h2>
@@ -300,7 +300,7 @@
                 </p>
             </div>
             <div class="top-hotel-main">
-                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=26957092">
+                <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=26957092"  target="_blank">
                     <div class="top-hotel-img" style="background-image: url(assets/images/thessaloniki-hotel8.jpg);"></div>
                 </a>
             </div>
