--- a/home-blogpost.html
+++ b/home-blogpost.html
@@ -53,7 +53,7 @@
             <div class="col-12">
                 <div class="banner_box">
                     <h1>
-                        Αρχική σελίδα Blogposts Αθήνα
+                        Αρχική σελίδα Blogposts
                     </h1>
                 </div>
             </div>
@@ -62,7 +62,7 @@
 </div>
 <!-- Banner Section End
 
-    <!-- home blogpost section start -->
+    <!- home blogpost section start -->
     <section class="home-blogpost pt-80">
         <div class="container">
             <div class="home-blogpost-heading">
