--- a/patras-blogpage.html
+++ b/patras-blogpage.html
@@ -53,7 +53,7 @@
                 <div class="col-12">
                     <div class="banner_box">
                         <h1>
-                            Πάτρα
+                            Πάτρα Blogposts
                         </h1>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="home-blogpost-heading">
                 <h2>
-                    Πάτρα
+                    Πάτρα Blogposts
                 </h2>
             </div>
             <div class="row">
