--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <title>Αρχική σελίδα</title>
@@ -52,7 +53,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="container">
-                        <div class="hero-text">
+                        <div class="hero-text"  data-aos="fade-up">
                             <h1>
                                 Ξενοδοχεία σε Αθήνα, Θεσσαλονίκη και Πάτρα
                             </h1>
@@ -397,7 +398,7 @@
     </footer>
     <!-- footer sec end -->
 
-
+    <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
     </body>
 </html>
