--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="container">
-                        <div class="hero-text"  data-aos="fade-up">
+                        <div class="hero-text">
                             <h1>
                                 Ξενοδοχεία σε Αθήνα, Θεσσαλονίκη και Πάτρα
                             </h1>
@@ -71,10 +71,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="after-banner-img" style="background-image: url(assets/images/home-banner.jpg);"></div>
+                    <div class="after-banner-img" style="background-image: url(assets/images/home-banner.jpg);"  data-aos="fade-right"></div>
                 </div>
                 <div class="col-md-6">
-                    <div class="after-banner-text">
+                    <div class="after-banner-text"  data-aos="fade-left">
                         <p>
                             Ανακαλύψτε τις κορυφαίες πόλεις της Ελλάδας μέσα από επιλεγμένα ξενοδοχεία
                         </p>
