--- a/athens.html
+++ b/athens.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <title>Αθήνα</title>
@@ -64,14 +65,14 @@
 
 
         <-- after-banner section start -->
-    <section class="after-banner pt-80">
+    <section class="after-banner pt-80  main-scroll">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="after-banner-img" style="background-image: url(assets/images/athens-after-banner.webp);"></div>
+                    <div class="after-banner-img" style="background-image: url(assets/images/athens-after-banner.webp);"  data-aos="fade-right"></div>
                 </div>
                 <div class="col-md-6">
-                    <div class="after-banner-text">
+                    <div class="after-banner-text"  data-aos="fade-left">
                         <p>
                             Διαμονή στο κέντρο της ιστορίας, του φαγητού και της τοπικής ζωής
                         </p>
@@ -91,7 +92,7 @@
 
 
     <!-- Top Hotels in Athens start -->
-    <section class="top-hotel pt-80">
+    <section class="top-hotel pt-80  main-scroll">
         <div class="container">
             <div class="top-hotel-heading">
                 <h2>
@@ -100,12 +101,12 @@
             </div>
             <!-- 01 -->
             <div class="top-hotel-inner">
-                <div class="top-hotel-main">
+                <div class="top-hotel-main" data-aos="fade-right">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel1.jpg);"></div>
                     </a>
                 </div>
-                <div class="top-hotel-text">
+                <div class="top-hotel-text"  data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=10261722" target="_blank">
                         <h2>
                             Ergon House
@@ -125,11 +126,11 @@
         </div>
     </section>
     <!-- 02 -->
-    <section class="scond-hotel mt-40">
+    <section class="scond-hotel mt-40  main-scroll">
         <div class="container">
             <div class="top-hotel-inner">
 
-                <div class="top-hotel-text">
+                <div class="top-hotel-text"  data-aos="fade-right">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084" target="_blank">
                         <h2>
                             The Zillers Boutique Hotel
@@ -143,7 +144,7 @@
                         και εστιατόριο στην ταράτσα. Ιδανική επιλογή για περιηγήσεις στο ιστορικό τρίγωνο με τα πόδια.
                     </p>
                 </div>
-                <div class="top-hotel-main">
+                <div class="top-hotel-main"  data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=9360084" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel2.jpg);"></div>
                     </a>
@@ -153,15 +154,15 @@
     </section>
 
     <!-- 03 -->
-    <section class="scond-hotel mt-40">
+    <section class="scond-hotel mt-40  main-scroll">
         <div class="container">
             <div class="top-hotel-inner">
-                <div class="top-hotel-main">
+                <div class="top-hotel-main"  data-aos="fade-right">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945" target="_blank">
                         <div class="top-hotel-img" style="background-image: url(assets/images/athenes-hotel3.jpg);"></div>
                     </a>
                 </div>
-                <div class="top-hotel-text">
+                <div class="top-hotel-text"  data-aos="fade-left">
                     <a href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&cid=-1&hl=el-gr&hid=31437945" target="_blank">
                         <h2>
                             Ava Hotel & Suites
@@ -654,6 +655,8 @@
     </footer>
     <!-- footer sec end -->
 
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
 
 </body>
