--- a/athens.html
+++ b/athens.html
@@ -642,7 +642,7 @@
                 <div class="footer_btm">
                     <div class="footer_btmWrapp">
                         <div class="copyright">
-                            <p> Copyright © 2025
+                            <p> Copyright © 2025,zeuzie.com
                                 All rights Reserved</p>
                         </div>
                         <div class="ssl">
