--- a/patras.html
+++ b/patras.html
@@ -628,6 +628,8 @@
     <!-- footer sec end -->
 
 
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
