--- a/athens-blogpost.html
+++ b/athens-blogpost.html
@@ -47,7 +47,7 @@
     <!--  Header Section end-->
 
     <!-- Banner Section Start -->
-    <div class="high-stakes-banner" style="background:url(assets/images/home-blogpost-banner.png);">
+    <div class="high-stakes-banner" style="background:url(assets/images/athens-blogpost-banner.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -330,8 +330,8 @@
                 <div class="footer_btm">
                     <div class="footer_btmWrapp">
                         <div class="copyright">
-                            <p> Copyright © 2025.zeuzie.com
-                                All rights Reserved</p>
+                            <p>
+                                Πνευματικά δικαιώματα © 2025.zeuzie.com Με την επιφύλαξη παντός δικαιώματος</p>
                         </div>
                         <div class="ssl">
                             <a href="#" class="sslLink"></a>
