--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -31,7 +31,7 @@
                     </div>
 
                     <ul class="nav no-search">
-                        <li class="nav-item"><a href="./" class="active">Αρχική σελίδα</a></li>
+                        <li class="nav-item"><a href="./">Αρχική σελίδα</a></li>
                         <li class="nav-item"><a href="athens.html">Αθήνα</a></li>
                         <li class="nav-item"><a href="thessaloniki.html">Θεσσαλονίκη</a></li>
                         <li class="nav-item"><a href="patras.html">Πάτρα</a></li>
@@ -420,8 +420,8 @@
                 <div class="footer_btm">
                     <div class="footer_btmWrapp">
                         <div class="copyright">
-                            <p> Copyright © 2025
-                                All rights Reserved</p>
+                            <p> 
+                                Πνευματικά δικαιώματα © 2025.zeuzie.com Με την επιφύλαξη παντός δικαιώματος</p>
                         </div>
                         <div class="ssl">
                             <a href="#" class="sslLink"></a>
