--- a/thessaloniki-blogpost.html
+++ b/thessaloniki-blogpost.html
@@ -318,8 +318,8 @@
                 <div class="footer_btm">
                     <div class="footer_btmWrapp">
                         <div class="copyright">
-                            <p> Copyright © 2025
-                                All rights Reserved</p>
+                            <p>
+                                Πνευματικά δικαιώματα © 2025.zeuzie.com Με την επιφύλαξη παντός δικαιώματος</p>
                         </div>
                         <div class="ssl">
                             <a href="#" class="sslLink"></a>
