--- a/patras.html
+++ b/patras.html
@@ -33,12 +33,12 @@
 
                     <ul class="nav no-search">
                         <li class="nav-item"><a href="./" >Αρχική σελίδα</a></li>
-                        <li class="nav-item"><a href="athens.html">Αθήνα</a></li>
-                        <li class="nav-item"><a href="thessaloniki.html">Θεσσαλονίκη</a></li>
-                        <li class="nav-item"><a href="patras.html" class="active">Πάτρα</a></li>
-                        <li class="nav-item"><a href="blog-posts.html">Αναρτήσεις Blog</a></li>
-                        <li class="nav-item"><a href="get-in-touch.html">Επικοινωνήστε</a></li>
-                        <li class="nav-item"><a href="relatively.html">Σχετικά</a></li>
+                        <li class="nav-item"><a href="athens">Αθήνα</a></li>
+                        <li class="nav-item"><a href="thessaloniki">Θεσσαλονίκη</a></li>
+                        <li class="nav-item"><a href="patras" class="active">Πάτρα</a></li>
+                        <li class="nav-item"><a href="blog-posts">Αναρτήσεις Blog</a></li>
+                        <li class="nav-item"><a href="get-in-touch">Επικοινωνήστε</a></li>
+                        <li class="nav-item"><a href="relatively">Σχετικά</a></li>
 
                     </ul>
                 </nav>
