--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
     <!-- after-banner section start -->
-    <section class="after-banner pt-80  main-scroll">
+    <div class="after-banner pt-80  main-scroll">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- after banner section end -->
 
 
