--- a/thessaloniki.html
+++ b/thessaloniki.html
@@ -67,8 +67,8 @@
         <!-- Banner Section End
 
 
- <-- after-banner section start -->
- <section class="after-banner pt-80 main-scroll">
+   <!- after-banner section start  -->
+ <div class="after-banner pt-80 main-scroll">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -86,7 +86,7 @@
             </div>
         </div>
     </div>
-</section>
+</div>
 <!-- after banner section end -->
 
 
