--- a/patras.html
+++ b/patras.html
@@ -66,8 +66,8 @@
 
 
 
-        <-- after-banner section start -->
-    <section class="after-banner pt-80 main-scroll">
+        <!- after-banner section start -->
+    <div class="after-banner pt-80 main-scroll">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- after banner section end -->
 
 
