--- a/get-in-touch.html
+++ b/get-in-touch.html
@@ -64,8 +64,8 @@
     <!-- Banner Section End
 
 
-           <-- after-banner section start -->
-    <section class="after-banner pt-80 mb-40">
+           <!- after-banner section start -->
+    <div class="after-banner pt-80 mb-40">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- after banner section end -->
 
 
