--- a/relatively.html
+++ b/relatively.html
@@ -65,8 +65,8 @@
     <!-- Banner Section End
 
 
-                 <-- after-banner section start -->
-    <section class="after-banner pt-80 mb-40">
+ <!- after-banner section start -->
+    <div class="after-banner pt-80 mb-40">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- after banner section end -->
 
 
