--- a/athens.html
+++ b/athens.html
@@ -630,19 +630,19 @@
                 <div class="footer_navbar" data-aos="fade-left">
                     <ul class="footer_list">
                         <li class="footer_item">
-                            <a href="privacy-policy.html">Πολιτική Απορρήτου
+                            <a href="privacy-policy">Πολιτική Απορρήτου
                             </a>
                         </li>
                         <li class="footer_item">
-                            <a href="terms-of-use.html">Όροι Χρήσης
+                            <a href="terms-of-use">Όροι Χρήσης
                             </a>
                         </li>
                         <li class="footer_item">
-                            <a href="returns-policy.html">Πολιτική Επιστροφών
+                            <a href="returns-policy">Πολιτική Επιστροφών
                             </a>
                         </li>
                         <li class="footer_item">
-                            <a href="personal-data-processing-policy.html">Πολιτική Επεξεργασίας Προσωπικών Δεδομένων
+                            <a href="personal-data-processing-policy">Πολιτική Επεξεργασίας Προσωπικών Δεδομένων
                             </a>
                         </li>
                     </ul>
