--- a/blog-posts.html
+++ b/blog-posts.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <title>Home</title>
+    <title>Αναρτήσεις Blog</title>
 </head>
 
 <body>
