--- a/athens.html
+++ b/athens.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="after-banner-text" data-aos="fade-left">
-                        <p>
+                        <p class="subheading-text">
                             Διαμονή στο κέντρο της ιστορίας, του φαγητού και της τοπικής ζωής
                         </p>
                         <p>
