--- a/patras.html
+++ b/patras.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="after-banner-text"  data-aos="fade-left">
-                        <p>
+                        <p class="subheading-text">
                             Θέα στη θάλασσα, φοιτητική ενέργεια και πύλη προς τη Δυτική Ελλάδα
                         </p>
                         <p>
